--- a/styles/style.css
+++ b/styles/style.css
@@ -81,17 +81,77 @@ body{
     border: none;
     border-radius: 40px;
 }
+
+#arrow{
+
+    text-align: center;
+    color: red;
+}
 .banner-img{
     background-image: url('../images/design.svg');
     background-repeat: no-repeat;
     padding: 30px;
 
 }
-
 .banner-img img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+/* company section style */
+
+.company-logo{
+    padding: 30px 50px;
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    
+}
+
+/* popular collection style */
+
+.section-title{
+    text-align: center;
+    font-weight: 600;
+    font-size: 1.80rem;
+    margin-bottom: 10px;
+}
+
+.collection{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+    margin-top: 20px;
+
+}
+.collection-card img{
+    width: 100%;
+    
+}
+
+.collection .collection-card{
+   /* max-width: 400px; */
+   border-radius: 5px;
+   padding: 10px;
+   box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.collection .collection-card .collection-title{
+    font-weight: 500;
+    font-size: 1.5rem;
+    margin-top: 10px; 
+    margin-bottom: 0px; 
+}
+.collection .collection-card .price{
+    font-weight: 400;
+    font-size: 1rem;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+.collection .collection-card .name{
+    font-weight: 400;
+    font-size: 0.8rem;
+    margin-top: 10px;
 }
 
 
@@ -100,8 +160,7 @@ body{
 @media screen and (max-width:576px){
     .navbar,.nav-links{
         flex-direction: column;
-        gap: 10px;
-       
+        gap: 10px; 
     }
     .banner{
         flex-direction: column-reverse;
@@ -113,17 +172,30 @@ body{
     .banner-img{
         background-image: none;
     }
+
+    .company-logo{
+        grid-template-columns: repeat(3,1fr);
+        gap:10px;   
+    }
+    .collection{
+        grid-template-columns: 1fr;
+    }
 }
 
 
 /* Medium Device Style Implement */
 
-@media screen and (min-width:576px) and(max-width:992px){
+@media screen and (min-width:576px) and (max-width:992px) {
     .navbar{
         flex-direction: column;
     } 
-    
+    .company-logo{
+        grid-template-columns: repeat(4,1fr);
+        gap:10px;
+    }
+    .collection{
+        grid-template-columns:repeat(2,1fr);
+    }
 }
-
 
 
