--- a/styles/style.css
+++ b/styles/style.css
@@ -153,12 +153,82 @@ body{
     font-size: 0.8rem;
     margin-top: 10px;
 }
+.arrow-icon{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+.btn-icon{
+   color: red;
+   border: none;
+   padding: 10px;
+   margin-top: 20px;
+   font-weight: 600px;
+   font-size: 1rem;
+   background-color: white;
+}
+
+.featured-btn{
+    background-color: #E02C6D;
+    color: white;
+    padding: 10px 30px;
+    font-weight: 700;
+    font-size: 1rem;
+    border: none;
+    border-radius: 40px;
+}
+
+.featured{
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    gap: 100px;
+    margin-top: 100px;
+}
+
+.featured-img img{
+    width: 100%;
+    height: 100%;
+}
+.featured-img{
+    width: 35%;
+}
+.featured-content{
+    width: 65%;
+}
+
+.featured-content .featured-title{
+    font-weight: 700px;
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.featured-content .featured-description{
+    font-weight: 400;
+    font-size: 1rem;
+    margin-top: 10px;
+}
+
+.footer{
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+}
+.footer-content{
+    text-align: center;
+}
 
 
 /* mobile device responsive */
 
 @media screen and (max-width:576px){
-    .navbar,.nav-links{
+    .navbar,
+    .nav-links,
+    .footer
+    {
         flex-direction: column;
         gap: 10px; 
     }
@@ -180,6 +250,18 @@ body{
     .collection{
         grid-template-columns: 1fr;
     }
+    
+    .featured{
+        flex-direction: column-reverse;
+        gap: 30px;
+    }
+    .featured-img{
+        width: 100%;
+    }
+    .featured-content{
+        width: 100%;
+        text-align: center;
+    }
 }
 
 
@@ -195,6 +277,17 @@ body{
     }
     .collection{
         grid-template-columns:repeat(2,1fr);
+    }
+    .featured{
+        flex-direction: column-reverse;
+        gap: 30px;
+    }
+    .featured-img{
+        width: 100%;
+    }
+    .featured-content{
+        width: 100%;
+        text-align: center;
     }
 }
 
